--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -60,3 +60,6 @@
 
 % argmin (https://tex.stackexchange.com/a/5255)
 \DeclareMathOperator*{\argmin}{arg\,min}
+
+% Roman numerals (https://tex.stackexchange.com/a/23492)
+\newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
