--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -313,12 +313,15 @@ therefore no dimensionality reduction is necessary, if neural embeddings are use
 The task of this thesis is the classification of orphan classes in Wikidata. In other words a function is needed, 
 which given an orphan class $u$ of a taxonomy $T = (C, S)$ with a root class $root_T$, find an appropriate superclass for $u$.
 
-\fullcite{Doan2002} suggests that for the task of placing a class into an appropriate position in $T$,
-either finding the most similar class, most specific superclass, or most general subclasses of $u$, are sensible approaches.
-Therefore a ''most-specific-parent" similarity measure $\mathit{sim}_\mathit{msp}(a, b)$ is assumed, which defines similarity between a subclass $a$ and a superclass $b$.
-$\mathit{sim}_\mathit{msp}(a, b)$ is $0$, if $b$ is not a superclass of $a$.
+An optimal similarity function $\mathit{sim}_\mathit{opt}$ is assumed for the definition of the problem statement.
+Let $s \in C$ be the most specific, appropiate superclass of $u$.
+The following property should be fulfilled by $\mathit{sim}_\mathit{opt}$:
+\begin{align}
+&\forall c \in C\setminus \{ s \} 1 = \mathit{sim}_\mathit{opt}(u, u) > \mathit{sim}_\mathit{opt}(u, s) > \mathit{u, c}
+\end{align}
+This definition implies that the most similar class to $u$ in the taxonomy $T$, other than $u$ itself, is the most appropiate superclass $s$ of $u$.
 
-The problem is defined as follows:
+The thesis' problem is defined as follows:
 \begin{definition}[Problem definition]\label{problem definition}
 Given a taxonomy $T = (C, S)$ with root class $root_T$ and a similarity function $sim$ over $T$,
 find a function $f: C \mapsto C$, 
