Added another reference for SGNS configuration.

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -13,7 +13,7 @@ For the task of computing word embeddings, the SGNS model (Section~\ref{section:
 It has been proven through theoretic analysis as well as experiments that SGNS creates very effective
 word embeddings, if its hyperparameters are chosen well \cite{Mikolov2013} \cite{Levy2015}.
 
-Based on \fullcite{Levy2015}, \fullcite{Mikolov2013} and \fullcite{Mikolov2013a} 
+Based on \fullcite{Levy2015}, \fullcite{Mikolov2013} \cite{Mikolov2013a}  and \fullcite{Baroni2014}
 the following hyperparameters are used:
 \begin{itemize}
 \item Embedding size: $300$
