--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -163,6 +163,22 @@
   title = {A Closer Look at Skip-gram Modelling},
   year = 2006
 }
+% some results on CBOW
+@article{Baroni2014,
+  added-at = {2016-01-28T11:05:54.000+0100},
+  author = {Baroni, Marco and Dinu, Georgiana},
+  biburl = {https://www.bibsonomy.org/bibtex/2d0acaa560edb2aed852b2321856aaf08/ans},
+  description = {Don't count, predict! A systematic comparison of context-counting vs. context-predicting semantic vectors},
+  interhash = {727478fd816465de4a943dac5d92268b},
+  intrahash = {d0acaa560edb2aed852b2321856aaf08},
+  journal = {52nd Annual Meeting of the Association for Computational Linguistics, ACL 2014 - Proceedings of the Conference},
+  keywords = {representation semantic vector},
+  pages = {238-247},
+  timestamp = {2016-01-28T11:05:54.000+0100},
+  title = {Don't count, predict! A systematic comparison of context-counting vs. context-predicting semantic vectors},
+  volume = 1,
+  year = 2014
+}
 % rdf2vec
 @Inbook{Ristoski2016,
 author="Ristoski, Petar
