--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -209,7 +209,7 @@ $12$ & $1.22\%$ & wine (mostly Italian wines)  & \textit{Greek wine} $\subclasso
 $14$ & $0.42\%$ & RNA & \textit{Small nucleolar RNA SNORD86} $\subclassof{}$  \textit{RNA} \\
 $15$ & $0.65\%$ & ambassadors & \textit{Ambassador of the Republic of China to the United States}
 \end{tabularx}
-\caption{Analysis of $15$ subclass-of clusters, which are plotted in Figure~\ref{fig:2d offsets}}
+\caption{Topics of subclass-of offset clusters (K=15); $\text{total} = 204,158$.}
 \label{table:offset cluster}
 \end{table}
 
